0.1.1; big disjunction filters for summary queries are replaced by filter IN, which makes remote Virtuoso accept them;  remove old OpAsQueryMore that aimed to write OpQuad, now we transform to OpQuadPattern and use Jena's OpAsQuery.